# cloud-native-ai-document-analyzer

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: README.md  __init__.py  main.py
backend/app/analysis/: __init__.py  base.py  openai.py
backend/app/api/: README.md  dependencies.py  router.py
backend/app/application/: README.md
backend/app/config/: __init__.py  settings.py
backend/app/database/: base.py  session.py
backend/app/domain/: README.md
backend/app/extraction/: __init__.py  base.py  csv.py  pdf.py  service.py
backend/app/infrastructure/: README.md
backend/app/messaging/: __init__.py  base.py  celery_publisher.py
backend/app/models/: __init__.py  document.py  document_analysis.py  processing_job.py
backend/app/repositories/: __init__.py  document_analyses.py  documents.py  processing_jobs.py
backend/app/schemas/: __init__.py  document.py  document_analysis.py  health.py  processing_job.py
backend/app/services/: __init__.py  analyses.py  documents.py  jobs.py  processing.py
backend/app/storage/: __init__.py  base.py  local.py
backend/app/tasks/: README.md
backend/app/worker/: __init__.py  celery_app.py  celery_factory.py  tasks.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260627_0001_create_documents.py  20260628_0002_create_processing_jobs.py  20260630_0003_create_document_analyses.py
backend/tests/: README.md
backend/tests/integration/: README.md  test_api_contract.py
backend/tests/unit/: README.md  (+7 more)
(+41 files in other folders)
