[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-document-analyzer-backend"
version = "0.1.0"
description = "REST API for document ingestion and analysis orchestration"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "celery[redis]>=5.6,<6.0",
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "python-multipart>=0.0.18,<1.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.5,<3.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.25,<2.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true
